@@ -1,3 +1,15 @@
+2009-07-20  Thomas Cataldo  <thomas.cataldo@aliasource.fr>
+
+	iPhone 3.0 calendar sync fully functionnal (again).
+	
+	* plugins/org.obm.push.backend.obm22/src/org/obm/push/backend/obm22
+	/calendar/CalendarBackend.java:
+	(CalendarBackend.getContentChanges):
+	* plugins/org.obm.push.wbxml/src/org/obm/push/wbxml/parsers/WbxmlEn
+	coder.java: (WbxmlEncoder.writeEmptyElement):
+	* plugins/org.obm.push/src/org/obm/push/impl/SyncHandler.java:
+	(SyncHandler.doUpdates), (SyncHandler.processModification):
+
 2009-07-16  Thomas Cataldo  <thomas.cataldo@aliasource.fr>
 
 	Working Provision dialog with iPhone 3.0 & AS protocol 12.1 :-)
